[tool.poetry]
name = "arlo"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = ">= 3.8, < 3.9"
alembic = "1.6.5"
Authlib = "0.15.4"
chardet = "^3.0.4"
cryptorandom = "0.3"
Flask = "1.1.4"
flask-talisman = "^0.8.1"
jsonschema = "^3.2.0"
numpy = "1.22.0"
requests = "2.25.1"
SQLAlchemy-Utils = "0.36.7"
xkcdpass = "1.19.2"
SQLAlchemy = "~1.3.20"
typing-extensions = "3.10.0.0"
auth0-python = "3.16.2"
gunicorn = "^20.1.0"
sentry-sdk = {version = "1.5.0", extras = ["flask"]}
athena = {git = "https://github.com/filipzz/athena.git", rev = "v0.8.3"}
psycopg2-binary = "~2.8.6"
consistent-sampler = {git = "https://github.com/votingworks/consistent_sampler.git"}
scipy = "1.6.3"
Flask-SeaSurf = "0.3.0"
boto3 = "1.20.8"
Flask-Session="^0.4"
Flask-SQLAlchemy="~2.5"

[tool.poetry.dev-dependencies]
filelock = "3.0.12"
mypy = "^0.790"
pytest = "6.2.4"
pytest-cov = "^2.12.1"
pytest-testmon = "1.1.1"
pylint = "~2.6.0"
black = "^19.10b0"
snapshottest = "^0.6.0"
pytest-alembic = "^0.2.5"
pytest-xdist = "2.3.0"
sqlalchemy-stubs = "^0.3"
noauth = {git = "https://github.com/votingworks/nOAuth.git", rev = "main"}
markupsafe = "~2.0.1"

[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"
