[tool.poetry]
name = "arlo"
version = "0.1.0"
description = ""
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
alembic = "^1.4.3"
Authlib = "^0.15.4"
chardet = "^3.0.4"
cryptorandom = "^0.3"
Flask = "^1.1.2"
flask-talisman = "^0.8.1"
jsonschema = "^3.2.0"
numpy = "^1.22.0"
requests = "^2.25.1"
SQLAlchemy-Utils = "0.38.3"
xkcdpass = "^1.19.2"
SQLAlchemy = "~1.3.20"
typing-extensions = "^4.1.0"
auth0-python = "^3.16.2"
gunicorn = "^20.1.0"
sentry-sdk = {version = "^1.2.0", extras = ["flask"]}
athena = {git = "https://github.com/filipzz/athena.git", rev = "v0.8.3"}
psycopg2-binary = "~2.8.6"
consistent-sampler = {git = "https://github.com/votingworks/consistent_sampler.git", rev = "master"}
scipy = "~1.6.0"
Flask-SeaSurf = "^0.3.0"
boto3 = "^1.20.8"
r2b2 = {git = "https://github.com/gwexploratoryaudits/r2b2.git"}
MarkupSafe = "==2.0.1" # Related to this problem: https://stackoverflow.com/questions/72191560/importerror-cannot-import-name-soft-unicode-from-markupsafe
urllib3 = ">=1.26,<2" # https://github.com/python-poetry/poetry-plugin-export/issues/239
jinja2 = "3.0.3" # Flask breaks with later versions of Jinja2
itsdangerous = "2.0.1" # Flask breaks with later versions of itsdangerous
werkzeug = "2.0.3" # Flask breaks with later versions of Werkzeug

[tool.poetry.dev-dependencies]
filelock = "^3.0.12"
mypy = "^0.790"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
pytest-testmon = "^1.1.1"
pylint = "^2.12.0"
black = "^24.0"
snapshottest = "^0.6.0"
pytest-alembic = "^0.2.5"
pytest-xdist = "^2.3.0"
sqlalchemy-stubs = "^0.3"
noauth = {git = "https://github.com/votingworks/nOAuth.git", rev = "main"}

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
