[tool.poetry]
name = "arlo"
version = "0.1.0"
description = ""
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
alembic = "^1.4.3"
Authlib = "^1.6.3"
chardet = "^3.0.4"
cryptorandom = "^0.3"
Flask = "^3.1.2"
flask-talisman = "^1.1.0"
jsonschema = "^3.2.0"
numpy = "^1.22.0"
requests = "^2.32.4"
SQLAlchemy-Utils = "0.38.3"
xkcdpass = "^1.19.2"
SQLAlchemy = "~1.3.20"
typing-extensions = "^4.1.0"
auth0-python = "^3.16.2"
gunicorn = "^23.0.0"
sentry-sdk = { version = "^2.36.0", extras = ["flask"] }
athena = { git = "https://github.com/filipzz/athena.git", rev = "v0.8.3" }
psycopg2-binary = "~2.8.6"
consistent-sampler = { git = "https://github.com/votingworks/consistent_sampler.git", rev = "master" }
scipy = "~1.11.0"
Flask-SeaSurf = "^2.0.0"
boto3 = "^1.20.8"
r2b2 = { git = "https://github.com/gwexploratoryaudits/r2b2.git" }
MarkupSafe = "3.0.2"
jinja2 = "3.1.6"
itsdangerous = "2.2.0"
werkzeug = "3.1.3"

[tool.poetry.group.dev.dependencies]
basedpyright = "^1.31.4"
filelock = "^3.0.12"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
pytest-testmon = "^1.1.1"
snapshottest = "^0.6.0"
pytest-alembic = "^0.2.5"
pytest-xdist = "^2.3.0"
sqlalchemy-stubs = "^0.3"
noauth = { git = "https://github.com/votingworks/nOAuth.git", rev = "main" }
ruff = "^0.12.12"
watchdog = "^6.0.0"

[tool.basedpyright]
stubPath = "stubs"

[tool.ruff.lint]
ignore = [
  # TODO: stop using * imports, then re-enable these
  "F405",
  "F403",
]

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
